--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-shadow-text": "^1.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
